[gd_scene load_steps=2 format=3 uid="uid://bw7ru83bhhnx3"]

[ext_resource type="Script" uid="uid://brlvlyysrwjjl" path="res://Assets/Scenes/Menus/main_menu.gd" id="1_nq61c"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_nq61c")

[node name="CenterContainer" type="CenterContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
layout_mode = 2

[node name="StartButton" type="Button" parent="CenterContainer/VBoxContainer"]
layout_mode = 2

[node name="OptionsButton" type="Button" parent="CenterContainer/VBoxContainer"]
layout_mode = 2

[node name="QuitButton" type="Button" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
